# aws-helpers

./: .gitignore  Cargo.toml  Makefile  README.md
aws_macros/: Cargo.toml
aws_macros/src/: lib.rs  tag.rs  tags.rs
src/: error.rs  export.rs  lib.rs
src/tags/: README.md  error.rs  helpers.rs  mod.rs  predefined_types.rs  svc.rs
