[package]
name = "aws-lib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[workspace.package]
version = "0.2.1"
edition = "2021"
rust-version = "1.81"

authors = ["Hannes Körber <hannes@hkoerber>"]
description = "Helper functions and types for AWS operations"
license = "GPL-3.0-only"
repository = "https://github.com/hakoerber/aws-rs"
keywords = ["aws"]
categories = ["api-bindings"]
readme = "README.md"

[dependencies]
aws-macros = { path = "./aws_macros", version = "0.2.*" }
aws-config = { version = "1.*", default-features = false }
aws-sdk-ec2 = { version = "1.*", default-features = false, features = [
  "rustls",
  "rt-tokio",
] }
aws-sdk-cloudfront = { version = "1.*", default-features = false, features = [
  "rustls",
  "rt-tokio",
] }
aws-sdk-efs = { version = "1.*", default-features = false, features = [
  "rustls",
  "rt-tokio",
] }
aws-sdk-route53 = { version = "1.*", default-features = false, features = [
  "rustls",
  "rt-tokio",
] }
aws-sdk-cloudformation = { version = "1.*", default-features = false, features = [
  "rustls",
  "rt-tokio",
] }
chrono = { version = "0.4.*", default-features = false, features = [
  "std",
  "now",
  "serde",
] }
serde = { version = "1.*", default-features = false, features = [
  "std",
  "derive",
], optional = true }
serde_json = { version = "1.*", default-features = false, features = [
  "std",
], optional = true }

[features]
default = []
serde = ["dep:serde"]
serde-tags = ["dep:serde", "dep:serde_json"]

[workspace]
resolver = "2"
members = ["aws_macros"]

[lints]
workspace = true

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
codegen-units = 1
rpath = false

[workspace.lints.rust]
absolute_paths_not_starting_with_crate = "deny"
elided_lifetimes_in_paths = "deny"
explicit_outlives_requirements = "deny"
keyword_idents = "deny"
let_underscore_drop = "deny"
non_ascii_idents = "deny"
non_local_definitions = "deny"
single_use_lifetimes = "deny"
unit_bindings = "deny"
unreachable_pub = "deny"
unsafe_code = { level = "forbid", priority = -1 }
unsafe_op_in_unsafe_fn = "deny"
unstable_features = { level = "forbid", priority = -1 }
unused_crate_dependencies = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
unused_results = "deny"
variant_size_differences = "deny"

[workspace.lints.clippy]
missing_errors_doc = "allow"
redundant_pub_crate = "allow"
must_use_candidate = "allow"
missing_const_for_fn = "warn"
too_many_lines = "allow"
too_many_arguments = "allow"
option_if_let_else = "allow"
match_bool = "allow"
new_without_default = "allow"
missing_panics_doc = "warn"
multiple_crate_versions = "allow"
map_unwrap_or = "allow"

pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }

# restrictions
renamed_function_params = "deny"
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
dbg_macro = "deny"
arithmetic_side_effects = "deny"
as_conversions = "deny"
assertions_on_result_states = "deny"
clone_on_ref_ptr = "deny"
create_dir = "deny"
decimal_literal_representation = "deny"
default_numeric_fallback = "deny"
deref_by_slicing = "deny"
disallowed_script_idents = "deny"
else_if_without_else = "deny"
empty_drop = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
exit = "deny"
expect_used = "allow"
filetype_is_file = "deny"
float_arithmetic = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
format_push_string = "deny"
get_unwrap = "deny"
if_then_some_else_none = "allow"
impl_trait_in_params = "allow"
indexing_slicing = "deny"
infinite_loop = "deny"
inline_asm_x86_att_syntax = "deny"
inline_asm_x86_intel_syntax = "deny"
integer_division = "deny"
iter_over_hash_type = "deny"
large_include_file = "deny"
let_underscore_must_use = "deny"
let_underscore_untyped = "deny"
little_endian_bytes = "deny"
lossy_float_literal = "deny"
map_err_ignore = "deny"
mem_forget = "deny"
missing_assert_message = "deny"
missing_asserts_for_indexing = "deny"
mixed_read_write_in_expression = "deny"
mod_module_files = "allow"
modulo_arithmetic = "deny"
multiple_inherent_impl = "deny"
multiple_unsafe_ops_per_block = "deny"
mutex_atomic = "deny"
panic = "deny"
panic_in_result_fn = "deny"
partial_pub_fields = "deny"
pattern_type_mismatch = "deny"
pub_without_shorthand = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_type_annotations = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
self_named_module_files = "deny"
semicolon_outside_block = "deny"
single_char_lifetime_names = "allow"
str_to_string = "deny"
string_add = "deny"
string_lit_chars_any = "deny"
string_slice = "deny"
string_to_string = "deny"
suspicious_xor_used_as_pow = "deny"
tests_outside_test_module = "deny"
try_err = "deny"
undocumented_unsafe_blocks = "deny"
unimplemented = "deny"
unnecessary_safety_comment = "deny"
unnecessary_safety_doc = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unseparated_literal_suffix = "deny"
unwrap_used = "deny"
use_debug = "deny"
verbose_file_reads = "deny"
